# QNetBench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PROJECT_STATE.md  QNetBench_Improved_AI_Handoff_Manual_v0_2.md  README.md  pyproject.toml
.github/workflows/: checkpoint-09-autofix.yml  checkpoint-09-format-apply.yml  checkpoint-09-format-diagnostic.yml  checkpoint-09-hotfix.yml  checkpoint-09-q2ns.yml  checkpoint-09-quisp.yml  checkpoint-09-sequence.yml  ci.yml  netsquid-probe.yml  q2ns-research-probe.yml  quisp-probe.yml  simulator-research-probes.yml
benchmarks/v0_1/: README.md  chain_3_batch.yaml  chain_5_batch.yaml  grid_3x3_batch.yaml  link_2_batch.yaml
connector_test/: hello_connector.py
docs/: adapter_guide.md  mock_pipeline_gate.md  quickstart.md  reproducibility.md  support_matrix.md
docs/ai_handoff/: checkpoint_00_report.md  checkpoint_01_report.md  checkpoint_02_report.md  checkpoint_03_independent_audit.md  checkpoint_03_report.md  checkpoint_04_report.md  checkpoint_05_report.md  checkpoint_06_report.md  checkpoint_07_cumulative_audit.md  checkpoint_07_report.md  checkpoint_08_5_independent_audit.md  checkpoint_08_5_report.md  checkpoint_08_independent_audit.md  checkpoint_08_report.md  checkpoint_09_report.md  ci_trigger_checkpoint_00.md
docs/contracts/: README.md  benchmark_spec_v0_1.md  canonical_result_v0_1.md  metric_definitions_v0_1.md
docs/decisions/: ADR-0001-contract-boundaries.md  ADR-0002-simulator-portfolio.md  ADR-0003-adapter-conformance-and-versioning.md  ADR-0004-paper-ready-release-gates.md
docs/planning/: QNetBench_Codex_Execution_Control_Plan_v0_1.md  QNetBench_Paper_Track_Roadmap_v1_0.md
docs/research/: simulator_compatibility_matrix.md  simulator_landscape_2026.md
qnetbench/: __init__.py  catalog.py  cli.py  errors.py
qnetbench/adapters/: __init__.py  base.py  mock.py  registry.py
qnetbench/analysis/: __init__.py  aggregate.py  plots.py
qnetbench/artifacts/: __init__.py  reader.py  writer.py
qnetbench/metrics/: __init__.py  compute.py  definitions.py  models.py
qnetbench/results/: __init__.py  models.py  validate.py
qnetbench/runners/: __init__.py  single.py  sweep.py
simulators/: conformance_cases_v1.yaml  conformance_v1.yaml  portfolio_v1.yaml
tests/: test_import.py
(+90 files in other folders)
