[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qnetbench"
version = "0.0.0.dev0"
description = "Contract-first benchmark layer for quantum-network simulators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "QNetBench contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "build"]

[tool.setuptools.packages.find]
include = ["qnetbench*"]

[tool.ruff]
line-length = 88
target-version = "py312"
