[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qnetbench"
version = "0.0.0.dev0"
description = "Contract-first benchmark layer for quantum-network simulators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "QNetBench contributors" }]
dependencies = [
    "pydantic>=2.8,<3",
    "PyYAML>=6.0",
    "typer>=0.12,<1",
]

[project.scripts]
qnetbench = "qnetbench.cli:app"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "jsonschema>=4.23",
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["qnetbench*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
